fix: make more space on mobile

--- a/src/components/ActivityBar/ActivityBar.module.scss
+++ b/src/components/ActivityBar/ActivityBar.module.scss
@@ -23,3 +23,7 @@
     margin: 10px 10px;
   }
 }
+
+.bottom {
+  margin-top: auto;
+}
