--- a/src/pages/Projects/Projects.module.scss
+++ b/src/pages/Projects/Projects.module.scss
@@ -6,7 +6,8 @@
   color: azure;
 
   @media (max-width: 768px) {
-    width: calc(100vw - 70px);
+    // width: calc(100vw - 70px);
+    width: 100%;
   }
 }
 
@@ -22,6 +23,7 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    padding: 10px;
   }
 
   @media (min-width: 1200px) {
