--- a/src/styles/main.module.scss
+++ b/src/styles/main.module.scss
@@ -47,7 +47,8 @@ a {
 
 /* width */
 ::-webkit-scrollbar {
-  width: 20px;
+  width: 10px;
+  height: 10px;
 }
 
 /* Handle */
